style.css
:root {
    --back-color: #000000;
    --main-color: #FFFFFF;
    --main-shadow: 0 0 10px var(--main-color);
    --rounded: 10px;
}

body {
    margin: 0;
    padding: 0;
    background-color: var(--back-color);
}

.wrapper {
    display: flex;
    width: 100%;
    min-height: calc(100dvh - 2ch - 4rem - 4rem - 4rem - 4rem);
    align-items: center;
    justify-content: center;
}

#clicker {
    display: block;
    width: 10rem;
    height: 10rem;
    background-color: var(--main-color);
    border-radius: 50%;
    transition: transform 150ms ease-in-out;
    cursor: pointer;
    user-select: none;
}

#clicker:hover {
    box-shadow: var(--main-shadow);
}

#clicker:active {
    transform: scale(1.1);
}

#counter {
    margin-top: 4rem;
    width: 100%;
    padding: 2rem 0;
    box-sizing: border-box;
    height: 2ch;
    color: var(--main-color);
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    font-size: 3rem;
    font-weight: 700;
}

#income {
    width: 100%;
    padding: 1rem 0;
    box-sizing: border-box;
    height: 2rem;
    color: var(--main-color);
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    font-size: 1.5rem;
    font-weight: 700;
}

.menu {
    width: 100%;
    height: 4rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

.btn {
    border-radius: 10px;
    border: 1px solid gray;
    font-weight: 700;
    background-color: transparent;
    color: white;
    font-size: 1.2rem;
    padding: 5px 10px;
    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
    transition-duration: 300ms;
    transition-timing-function: ease-in-out;
}

@media (hover: hover) {
    .btn:hover {
        background-color: white;
        color: black;
        box-shadow: white 0 0 10px;
    }
}

@media (hover: none) {
    .btn:active {
        background-color: white;
        color: black;
        box-shadow: white 0 0 10px;
    }
}

#clicker.active {
    box-shadow: var(--main-shadow);
    transform: scale(1.1);
}

.menu-dialog[open] {
    display: flex;
}

.menu-dialog {
    margin: 0;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    box-sizing: border-box;
    flex-direction: column;
    justify-content: flex-start;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 4rem 1rem;
    font-size: 2.5rem;
    color: white;
    border: 1px solid gray;
    min-height: 75dvh;
    width: 450px;
    border-radius: var(--rounded);
    background-color: var(--back-color);
}

.upgrade {
    width: 100%;
    margin: 1rem 0;
    box-sizing: border-box;
    height: 100%;
    color: var(--main-color);
    display: grid;
    grid-template-columns: repeat(3, minmax(0, 1fr));
    row-gap: 1rem;
    font-size: 1.5rem;
    font-weight: 700;
}

.form-dialog-close {
    margin: auto 0 0 0;
}

